<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:animationCache="false"
    android:background="#000000"
    tools:context=".Registration">


    <TextView
        android:id="@+id/Appname"
        android:layout_width="172dp"
        android:layout_height="73dp"
        android:text="@string/digi_id"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="102dp"
        android:layout_height="52dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="12dp"
        android:padding="10dp"
        app:ccp_textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/otp"
        app:layout_constraintEnd_toStartOf="@+id/phoneNum"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneNum"
        android:layout_width="261dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Enter_mobile_number"
        android:inputType="phone"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="#808080"
        android:textColorHint="#808080"
        android:textIsSelectable="false"
        android:textSize="19sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.381"
        tools:visibility="visible">

    </EditText>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="229dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="216dp"
        android:background="@drawable/button_shape"
        android:text="@string/next"
        android:textColor="#1B1B1B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp"
        app:layout_constraintVertical_bias="0.364" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <TextView
        android:id="@+id/state"
        android:layout_width="160dp"
        android:layout_height="20dp"
        android:text="@string/sending_otp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <EditText
        android:id="@+id/otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_otp"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#808080"
        android:textColorHint="#DEDFE6"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/resendbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="23dp"
        android:text="@string/resend"
        android:textColor="#141B21"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <TextView
        android:id="@+id/registrationtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Appname"
        app:layout_constraintVertical_bias="0.152" />

</androidx.constraintlayout.widget.ConstraintLayout>